--- a/css/style.css
+++ b/css/style.css
@@ -7273,7 +7273,7 @@ body {
   font-size: 15px;
   line-height: 1.8;
   font-weight: 300;
-  color: #ff0000; }
+  color: #e71a36; }
   body.menu-show {
     overflow: hidden;
     position: fixed;
@@ -7284,10 +7284,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #1a1888; }
+  color: #312770; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #1a1888;
+    color: #312770;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -7297,7 +7297,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .text-primary {
-  color: #1a1888 !important; }
+  color: #312770 !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -7335,7 +7335,7 @@ h1, h2, h3, h4, h5,
         padding-top: .6rem;
         padding-bottom: .6rem; } }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #1a1888; }
+      color: #312770; }
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
     border: none;
     background: #fff;
@@ -7389,12 +7389,12 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #fff; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #1a1888;
-      border: 1px solid #1a1888; }
+      background: #312770;
+      border: 1px solid #312770; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored span {
-    border-color: #1a1888; }
+    border-color: #312770; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #1a1888; }
+    color: #312770; }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -7413,10 +7413,10 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #1a1888 !important; }
+      color: #312770 !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #1a1888;
+      background: #312770;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -7431,7 +7431,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #1a1888; }
+      border-color: #312770; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -7457,7 +7457,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #1a1888 !important; }
+        color: #312770 !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -7476,7 +7476,7 @@ h1, h2, h3, h4, h5,
   font-size: 20px;
   text-transform: uppercase;
   padding: 1.2rem 1rem 1.2rem 1rem;
-  background:#1a1888;
+  background:#312770;
   position: relative; }
   .navbar-brand span {
     position: absolute;
@@ -7501,7 +7501,7 @@ h1, h2, h3, h4, h5,
     transform: translateY(100%);
     border-style: solid;
     border-width: 20px 67px 0 66px;
-    border-color: #1a1888 transparent transparent transparent; }
+    border-color: #312770 transparent transparent transparent; }
 
 .hero-wrap {
   width: 100%;
@@ -7578,7 +7578,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #1a1888 !important;
+      color: #312770 !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -7691,7 +7691,7 @@ h1, h2, h3, h4, h5,
               content: '';
               width: 3px;
               height: 80px;
-              background: #1a1888; } }
+              background: #312770; } }
         .owl-carousel.home-slider .slider-item .slider-text h1 {
           font-size: 40px;
           color: #fff;
@@ -7808,20 +7808,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #1a1888;
-    border: 1px solid #1a1888;
+    background: #312770;
+    border: 1px solid #312770;
     color: #fff; }
     .btn.btn-primary:hover {
-      border: 1px solid #1a1888;
+      border: 1px solid #312770;
       background: transparent;
-      color: #1a1888; }
+      color: #312770; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #1a1888;
+      border: 1px solid #312770;
       background: transparent;
-      color: #1a1888; }
+      color: #312770; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #1a1888;
+        background: #312770;
         color: #fff; }
   .btn.btn-white {
     background: #fff;
@@ -7829,7 +7829,7 @@ h1, h2, h3, h4, h5,
     color: #000000; }
     .btn.btn-white:hover, .btn.btn-white:focus, .btn.btn-white:active {
       border: 1px solid #fff;
-      color: #1a1888; }
+      color: #312770; }
     .btn.btn-white.btn-outline-white {
       border-color: #402befcc;
       background: none;
@@ -7842,7 +7842,7 @@ h1, h2, h3, h4, h5,
       .btn.btn-white.btn-outline-white:hover, .btn.btn-white.btn-outline-white:focus, .btn.btn-white.btn-outline-white:active {
         background: #fff;
         border-color: #fff;
-        color: #1a1888; }
+        color: #312770; }
 
 .btn-custom {
   font-weight: 500;
@@ -7875,7 +7875,7 @@ h1, h2, h3, h4, h5,
     transition: all 0.3s ease; }
     .ftco-services .services .icon span {
       font-size: 50px;
-      color: #1a1888; }
+      color: #312770; }
   .ftco-services .services .media-body {
     width: calc(100% - 100px); }
     .ftco-services .services .media-body h3 {
@@ -7898,7 +7898,7 @@ h1, h2, h3, h4, h5,
     font-size: 14px; }
   .getaquote-form h3 {
     padding: 20px;
-    background: #1a1888;
+    background: #312770;
     color: #fff;
     font-size: 24px; }
   @media (min-width: 768px) {
@@ -7923,7 +7923,7 @@ h1, h2, h3, h4, h5,
   .img-2 .icon {
     width: 100px;
     height: 100px;
-    background: #1a1888;
+    background: #312770;
     -webkit-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
     -webkit-border-radius: 50%;
@@ -7961,7 +7961,7 @@ h1, h2, h3, h4, h5,
     transition: all 0.3s ease; }
     .services-wrap .icon span {
       font-size: 40px;
-      color: #1a1888; }
+      color: #312770; }
   .services-wrap .media-body {
     width: calc(100% - 80px); }
     .services-wrap .media-body h3 {
@@ -7970,7 +7970,7 @@ h1, h2, h3, h4, h5,
       letter-spacing: 1px;
       font-size: 18px; }
   .services-wrap:hover .icon {
-    background: #1a1888; }
+    background: #312770; }
     .services-wrap:hover .icon span {
       color: #fff; }
 
@@ -7982,7 +7982,7 @@ h1, h2, h3, h4, h5,
   .info-contact p span:first-child {
     font-weight: 600; }
   .info-contact p span a {
-    color: #1a1888; }
+    color: #312770; }
 
 .staff {
   margin-bottom: 60px; }
@@ -7992,7 +7992,7 @@ h1, h2, h3, h4, h5,
     font-size: 20px;
     margin-bottom: 0; }
   .staff .text .position {
-    color: #1a1888;
+    color: #312770;
     display: block; }
 
 .ftco-social {
@@ -8076,7 +8076,7 @@ h1, h2, h3, h4, h5,
     .blog-entry .text .heading a {
       color: #000000; }
       .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-        color: #1a1888; }
+        color: #312770; }
   .blog-entry .text .meta-chat {
     color: #b3b3b3; }
   .blog-entry .text .read {
@@ -8118,7 +8118,7 @@ h1, h2, h3, h4, h5,
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      border: 1px solid #1a1888;
+      border: 1px solid #312770;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -8126,7 +8126,7 @@ h1, h2, h3, h4, h5,
       line-height: 40px;
       border-radius: 50%; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #1a1888;
+      background: #312770;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -8244,12 +8244,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #1a1888; }
+      color: #312770; }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #1a1888; }
+    color: #312770; }
 
 #map {
   width: 100%; }
@@ -8286,10 +8286,10 @@ textarea.form-control {
   margin-bottom: 0;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #1a1888; }
+  color: #312770; }
 
 .heading-section h2 {
-  color:#1a1888;
+  color:#391888;
   font-size: 34px;
   font-weight: 500; }
   @media (max-width: 767.98px) {
@@ -8305,7 +8305,7 @@ textarea.form-control {
     width: 100%;
     height: 1px;
     content: '';
-    background: #1a1888; }
+    background: #312770; }
 
 .heading-section.heading-section-white .subheading {
   color: rgba(255, 255, 255, 0.7); }
@@ -8389,7 +8389,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.2); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #1a1888; }
+        background: #312770; }
 
 .testimony-wrap {
   display: block;
@@ -8414,7 +8414,7 @@ textarea.form-control {
       -ms-border-radius: 50%;
       border-radius: 50%; }
       .testimony-wrap .user-img .quote i {
-        color: #1a1888; }
+        color: #312770; }
   .testimony-wrap .name {
     font-weight: 400;
     font-size: 18px;
@@ -8435,7 +8435,7 @@ textarea.form-control {
       content: '';
       width: 3px;
       height: 30px;
-      background: #1a1888; }
+      background: #312770; }
 
 @media (min-width: 1200px) {
   .steps {
@@ -8464,7 +8464,7 @@ textarea.form-control {
       border-radius: 50px; } }
   .step span {
     width: 60px;
-    color: #1a1888;
+    color: #312770;
     font-size: 18px;
     line-height: 1.5; }
   .step h3 {
@@ -8535,7 +8535,7 @@ textarea.form-control {
     display: block;
     font-size: 72px;
     font-weight: bold;
-    color: #1a1888; }
+    color: #312770; }
   .ftco-counter .ftco-label {
     font-size: 12px;
     text-transform: uppercase;
@@ -8580,7 +8580,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #1a1888; }
+        color: #312770; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 12px;
@@ -8682,7 +8682,7 @@ textarea.form-control {
     transform: translateY(-50%); }
 
 .subs-wrap {
-  background: #1a1888 !important;
+  background: #312770 !important;
   display: block;
   width: 100%;
   color: rgba(255, 255, 255, 0.7); }
