--- a/css/style.css
+++ b/css/style.css
@@ -303,10 +303,9 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: fantasy;
-  font-weight: 500;
-  line-height: 1.2;
-  color: inherit; }
+  font-family: fantasy !important;
+  font-size: 80px;
+  color: #1a1888; }
 
 h1, .h1 {
   font-size: 2.5rem; }
